--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -519,3 +519,80 @@ a {
     .cart-continue-shopping:hover{
          background-color: #2980b9;
 }
+/*  
+  login style  */
+
+
+.login-container {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 80vh; 
+background-image: url('../src/images/background2.jpg');
+background-size: cover;
+background-position: center;
+position: relative; 
+}
+.login-form-container{
+background-color: rgba(0,0,0,0.8);
+padding: 40px;
+border-radius: 10px;
+position: relative;
+z-index: 2;
+}
+.login-container h2 {
+text-align: center;
+color: #fff;
+margin-bottom: 20px;
+}
+.login-container .auth-input {
+margin-bottom: 15px;
+}
+.login-container .auth-input label {
+display: block;
+color: #ccc;
+margin-bottom: 5px;
+}
+.login-container .auth-input input {
+padding: 12px;
+width: calc(100% - 24px);
+border-radius: 5px;
+border: 1px solid #555;
+background-color: #333;
+color: #eee;
+}
+.login-container .auth-button {
+background-color: #ff9800;
+color: #222;
+padding: 12px 25px;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+transition: background-color 0.3s ease, color 0.3s ease;
+font-weight: bold;
+}
+.login-container .auth-button:hover {
+background-color: #ffa500;
+}
+.login-container .signup-text {
+color: #ccc;
+text-align: center;
+margin-top: 20px;
+}
+.login-container .signup-text a {
+color: #4cae4c;
+}
+.login-container p {
+color: red
+}
+.login-container::before {
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.5); 
+z-index: 1; 
+}
+
