--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,11 @@
 /* frontend/src/index.css */
+/* frontend/src/index.css */
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
-  background-color: #333;
+   font-family: 'Arial', sans-serif;
+   background-color: #333;
   color: #eee;
-  line-height: 1.6;
+   line-height: 1.6;
 }
 
 /* Main Container */
@@ -484,115 +485,127 @@ a {
   font-size: 1.2em;
   margin-left: 5px;
 }
-
 /* Cart page component*/
 .cart-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-   }
-   .cart-empty {
-        display: flex;
-       flex-direction: column;
-      align-items: center;
-      padding: 20px;
-    border-radius: 10px;
-    }
-   .cart-icon-empty{
-        font-size: 6em;
-      color: #3498db;
-    }
-  .cart-empty-message {
-       font-size: 1.2em;
-      margin: 15px 0;
-      color: #ffab00;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-   .cart-continue-shopping {
-      padding: 10px 20px;
-        background-color: #3498db;
-     color: white;
-       border-radius: 5px;
-     cursor: pointer;
-        border: none;
-       transition: background-color 0.3s ease;
-  }
-    .cart-continue-shopping:hover{
-         background-color: #2980b9;
+.cart-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-radius: 10px;
 }
-/*  
-  login style  */
-
-
+.cart-icon-empty {
+  font-size: 6em;
+  color: #3498db;
+}
+.cart-empty-message {
+  font-size: 1.2em;
+  margin: 15px 0;
+  color: #ffab00;
+}
+.cart-continue-shopping {
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+.cart-continue-shopping:hover {
+  background-color: #2980b9;
+}
+/*  login style  
 .login-container {
-display: flex;
-justify-content: center;
-align-items: center;
-height: 80vh; 
-background-image: url('../src/images/background2.jpg');
-background-size: cover;
-background-position: center;
-position: relative; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  background-image: url('../src/images/background2.jpg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
-.login-form-container{
-background-color: rgba(0,0,0,0.8);
-padding: 40px;
-border-radius: 10px;
-position: relative;
-z-index: 2;
+.login-form-container {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 40px;
+  border-radius: 10px;
+  position: relative;
+  z-index: 2;
 }
 .login-container h2 {
-text-align: center;
-color: #fff;
-margin-bottom: 20px;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 20px;
 }
 .login-container .auth-input {
-margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 .login-container .auth-input label {
-display: block;
-color: #ccc;
-margin-bottom: 5px;
+  display: block;
+  color: #ccc;
+  margin-bottom: 5px;
 }
 .login-container .auth-input input {
-padding: 12px;
-width: calc(100% - 24px);
-border-radius: 5px;
-border: 1px solid #555;
-background-color: #333;
-color: #eee;
+  padding: 12px;
+  width: calc(100% - 24px);
+  border-radius: 5px;
+  border: 1px solid #555;
+  background-color: #333;
+  color: #eee;
 }
 .login-container .auth-button {
-background-color: #ff9800;
-color: #222;
-padding: 12px 25px;
-border: none;
-border-radius: 5px;
-cursor: pointer;
-transition: background-color 0.3s ease, color 0.3s ease;
-font-weight: bold;
+  background-color: #ff9800;
+  color: #222;
+  padding: 12px 25px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  font-weight: bold;
 }
 .login-container .auth-button:hover {
-background-color: #ffa500;
+  background-color: #ffa500;
 }
 .login-container .signup-text {
-color: #ccc;
-text-align: center;
-margin-top: 20px;
+  color: #ccc;
+  text-align: center;
+  margin-top: 20px;
 }
 .login-container .signup-text a {
-color: #4cae4c;
+  color: #4cae4c;
 }
 .login-container p {
-color: red
+  color: red;
 }
 .login-container::before {
-content: '';
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background: rgba(0, 0, 0, 0.5); 
-z-index: 1; 
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+/* search bar  */
+
+.search-container input[type="text"] {
+  padding: 8px 12px;
+ border: none;
+  border-radius: 4px;
+ background-color: #444;
+color: white;
+margin-right: 10px;
+transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+  .search-container input[type="text"]:focus {
+   outline: none;
+ box-shadow: 0 0 5px rgba(255, 165, 0, 0.5); /* Orange glow on focus */
+  border: 2px solid #ff9800;
+  }
